--- a/src/layouts/Rodape.astro
+++ b/src/layouts/Rodape.astro
@@ -12,9 +12,9 @@ import RodapeTopico from "./RodapeTopico.astro";
         <h4 >@Desenvolvido por: João Lucas Silva Lopes</h4>
     </div>
     <div class="justify-around flex p-1">
-        <RodapeTopico titulo="contanto" itens={[ { conteudo: "github", link: "" },
-            {conteudo: "linkedin", link: ""},
-            { conteudo: "email", link: "" }
+        <RodapeTopico titulo="contanto" itens={[ { conteudo: "github", link: "https://github.com/Joao-Lucas-Si" },
+            {conteudo: "linkedin", link: "https://www.linkedin.com/in/jo%C3%A3o-lucas-silva-lopes-b629a0286/"},
+            { conteudo: "email: joao6lucas2168@gmail.com", link: "mailto:joao6lucas2168@gmail.com" }
          ]} />
         <RodapeTopico titulo="projetos" itens={Projetos.map(projeto => ({ conteudo: projeto.nome, link: projeto.link }))} />
     </div>
