--- a/src/layouts/sections/conhecimentos/ConhecimentosSecaoGrid.astro
+++ b/src/layouts/sections/conhecimentos/ConhecimentosSecaoGrid.astro
@@ -10,6 +10,11 @@ import conhecimentos from "../../../constants/conhecimentos";
         class="w-[90%] flex lg:flex-row flex-col-reverse gap-12 min-h-[50vh] justify-between items-center m-auto"
     >
         <div class="lg:w-[60%] w-[100%] min-h-[60vh]">
+            <div class="info atual">
+                <div class="flex justify-center items-center">
+                    <h3 class="text-gray-300 text-3xl">Selecione uma tecnologia</h3>
+                </div>
+            </div>
             {
                 conhecimentos.map((conhecimento) => (
                     <div
