--- a/src/layouts/Menu.astro
+++ b/src/layouts/Menu.astro
@@ -5,11 +5,11 @@ import NekoArk from "../assets/images/neko-ark.png"
 const paginaAtual = Astro.originPathname
 ---
 
-<div class="border-y-2 bg-gray-900 border-y-purple-500 flex justify-between z-10 p-4 sticky top-[-0.2rem]">
+<div class="border-y-2 bg-gray-900 border-y-purple-500 flex justify-between z-10 md:p-4 p-2 sticky top-[-0.2rem]">
     <div class="flex items-center gap-2 justify-center">
 
         <Image class="w-12 h-12 drop-shadow-[0_0_15px_purple]" alt="neko-ark " src={NekoArk} />
-        <h2 class="palavras-chaves text-2xl font-bold drop-shadow-[0_0_15px_purple] text-purple-500"><span class="indicador">|</span></h2>
+        <h2 class="palavras-chaves md:block text-2xl hidden font-bold drop-shadow-[0_0_15px_purple] text-purple-500"><span class="indicador">|</span></h2>
     </div>
     <ul class="flex gap-2 items-center justify-center ">
         {[...(paginaAtual == "/") ? [
