--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import MainHeader from '../layouts/MainHeader.astro';
 import Menu from '../layouts/Menu.astro';
 import Rodape from '../layouts/Rodape.astro';
 import RodapeTopico from '../layouts/RodapeTopico.astro';
+import ConhecimentosSecao from '../layouts/sections/ConhecimentosSecao.astro';
 import ProjetosSecao from '../layouts/sections/ProjetosSecao.astro';
-import ConhecimentosSecaoGrid from '../layouts/sections/conhecimentos/ConhecimentosSecaoGrid.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -14,7 +14,7 @@ import ConhecimentosSecaoGrid from '../layouts/sections/conhecimentos/Conhecimen
 <Layout>
 	<MainHeader />
 	<Menu />
-	<ConhecimentosSecaoGrid />
+	<ConhecimentosSecao />
 	<ProjetosSecao />
 	<Rodape />
 </Layout>
