--- a/src/layouts/sections/conhecimentos/ListaConhecimentos.astro
+++ b/src/layouts/sections/conhecimentos/ListaConhecimentos.astro
@@ -25,8 +25,8 @@ import conhecimentos from "../../../constants/conhecimentos";
                     </div>
                     {conhecimento.subs && (
                         <ul class="ml-10 pl-6 flex flex-col gap-4 border-l-solid border-l-purple-500 border-l-4">
-                            {conhecimento.subs
-                                .toSorted((e1, e2) => e2.nivel - e1.nivel)
+                            {[...conhecimento.subs]
+                                .sort((e1, e2) => e2.nivel - e1.nivel)
                                 .map((sub) => (
                                     <li class="flex gap-2 items-center">
                                         <div class="w-32 h-32 items-center flex flex-col">
