--- a/src/layouts/sections/conhecimentos/ListaConhecimentos.astro
+++ b/src/layouts/sections/conhecimentos/ListaConhecimentos.astro
@@ -5,7 +5,7 @@ import conhecimentos from "../../../constants/conhecimentos";
 <ul class="px-4 flex flex-col gap-4">
     {
         [...conhecimentos]
-            .toSorted((e1, e2) => e2.nivel - e1.nivel)
+            .sort((e1, e2) => e2.nivel - e1.nivel)
             .map((conhecimento) => (
                 <li class="flex flex-col gap-4">
                     <div class="flex gap-2 items-center justify-center">
